--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ matplotlib    = "^3.7.2"
 seaborn       = "^0.12.2"
 scipy         = "*"
 
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.25.0"
+
 [build-system]
 requires      = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
