--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pandas        = "^2.0.3"
 numpy         = "^1.25.1"
 matplotlib    = "^3.7.2"
 seaborn       = "^0.12.2"
+adjusttext = "^0.8"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.25.0"
