--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ matplotlib    = "3.7.2"
 seaborn       = "0.12.2"
 adjusttext    = "0.8"
 scipy         = "^1.11.1"
+nbformat      = "^5.9.2"
+pillow        = ">=9.4.0,<10.0.0"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel     = "6.25.0"
